K8s/Istio/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-service
  namespace: robot-shop
spec:
  podSelector:
    matchLabels:
      app: payment
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web
      ports:
        - protocol: TCP
          port: 8080
  policyTypes:
  - Ingress
#####This allows only the web service to access the payment service on port 8080.#####
